--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<p>COLDBEATZ PRODUCTION</p>
 	
 	
-				<a href = "https://vk.com/coldbeatz" target = "blank">ВКонтакте</a><br>
+				<a href = "https://vk.com/coldbeatz" target = "blank">Р’РљРѕРЅС‚Р°РєС‚Рµ</a><br>
 				<a href = "https://www.instagram.com/coldbeatzprod/" target = "blank">Instagram</a><br>
 				<a href="mailto:vbitmar@mail.ru">vbitmar@mail.ru</a>
 			
