--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype HTML>
 <html>
 	<head>
-		<title>[rew[r</title>
+		<title>COLDBEATZ</title>
 		<link type = "text/css" rel = "stylesheet" href = "style.css">
 	</head>
 	<body>
