--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>COLDBEATZ</title>
+		<link rel="preload" href="/KelsonSansBold.otf" as="font" type="font/otf"/>
 		<link type = "text/css" rel = "stylesheet" href = "style.css">
 	</head>
 	<body>
