--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class = "info-container">
-			<p>COLDBEATZ PRODUCTIONx</p>
+			<p>COLDBEATZ PRODUCTIONxz</p>
 	
 	
 				<a href = "https://vk.com/coldbeatz" target = "blank">ВКонтакте</a><br>
